<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/v1_LL_header"
        
        style="@style/v1_LL_header"
    
    >

        <TextView
            android:id="@+id/textView1"
        	
        	style="@style/v1_TV_header"
        	
            android:text="@string/v1_TV_header" />

        <Button
            android:id="@+id/v1_BT_up"
            
            style="@style/v1_BT_up"
            
            android:text="@string/v1_BT_up" 
            />

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        
        style="@style/v1_LV_file_list"
		>
    </ListView>

    <LinearLayout
        android:id="@+id/v1_LL_buttons"
        
        style="@style/v1_LL_header"
        	>

        <Button
            android:id="@+id/v1_BT_btn_1"
            
            style="@style/v1_BT_btn_1"
            
            android:text="@string/v1_BT_btn_1"
            
            />

        <Button
            android:id="@+id/v1_BT_btn_2"
            
            style="@style/v1_BT_btn_2"
            
            android:text="@string/v1_BT_btn_2"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/v1_LL_debug"
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/v1_TV_debug"
            
            style="@style/v1_TV_debug"
            
            android:text="@string/v1_TV_debug" />

    </LinearLayout>

</LinearLayout>