<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/v1_LL_header"
        >

        <ImageView
            android:id="@+id/v2_IV_image"
            
            style="@style/v2_IV_image"
		
            android:src="@drawable/ic_launcher" />
        
    </LinearLayout>

    <LinearLayout
        style="@style/v1_LL_header"
        
        >

        <Button
            android:id="@+id/v2_BT_back"
            
            style="@style/v1_BT_btn_1"
            
            android:text="@string/v2_BT_back" />

        <Button
            android:id="@+id/v2_BT_btn_2"
            style="@style/v1_BT_btn_2"
            android:text="@string/v2_BT_btn_2" />
    </LinearLayout>

    <LinearLayout
        style="@style/v1_LL_header"
        android:layout_width="match_parent" >

        <TextView
            android:id="@+id/v2_TV_message"
            style="@style/v1_TV_debug"
            android:text="@string/v2_TV_message" />
    </LinearLayout>
</LinearLayout>
